# static-tests

./: .gitignore  CMakeLists.txt  README.md
include/: add_pointer_t.hpp  count_types.hpp  debug.hpp  deg2rad.hpp  vec2.hpp
test/: CMakeLists.txt  add_pointer_t.cpp  count_types.cpp  deg2rad.cpp  static_tests.cpp  vec2.cpp
